--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  google_fonts: ^6.3.2
+  flutter_map: ^6.0.0
+  latlong2: ^0.9.0
+  google_fonts: ^6.1.0
+  flutter_floating_bottom_bar: ^1.3.0
 
 dev_dependencies:
   flutter_test:
