--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   latlong2: ^0.9.0
   google_fonts: ^6.1.0
   flutter_floating_bottom_bar: ^1.3.0
+  langchain: ^0.8.0+1
+  langchain_openai: ^0.8.0+1
+  http: ^1.2.2
+  image_picker: ^1.1.2
+  image: ^4.2.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
