--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.2.2
   image_picker: ^1.1.2
   image: ^4.2.0
+  path_provider: ^2.1.5
   provider: ^6.1.2
 
 dev_dependencies:
